--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-html,
+/* html,
 body {
   padding: 0;
   margin: 0;
@@ -28,4 +28,4 @@ a {
     color: white;
     background: black;
   }
-}
+} */
